<resources>
    <string name="app_name">LoginSample</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    //login Content
    <string name="prompt_phonenumber">Phone Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."</string>
    <string name="refferal">Referral Code</string>
    <string name="title_activity_match_update">MatchUpdate</string>
    <string name="title_activity_register">RegisterActivity</string>


</resources>
